--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charSet="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0" />
-  <meta name=" description" content="MeDIA eYe NFT Portal puts power of blockchain to work for your next marketing campaign, promotion, rewards program or creating a collectible." />
+  <meta name=" description"
+    content="MeDIA eYe NFT Portal puts power of blockchain to work for your next marketing campaign, promotion, rewards program or creating a collectible." />
   <meta name="robots" content="noindex" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
