--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,19 @@
 
         gtag('config', 'UA-61146430-4');
     </script>
+    <!-- Global site tag (gtag.js) - Google Ads: 948027235 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-948027235"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-948027235');
+    </script>
+    <!-- Event snippet for Website traffic conversion page -->
+    <script>
+        gtag('event', 'conversion', { 'send_to': 'AW-948027235/4ncLCNKb0vICEOP-hsQD' });
+    </script>
 </head>
 
 <body>
